bitfield/tests/04-multiple-of-8bits.stderr
error[E0277]: the trait bound `[u8; 7]: bitfield::checks::TotalSizeIsMultipleOfEightBits` is not satisfied
  --> tests/04-multiple-of-8bits.rs:53:1
   |
53 | #[bitfield]
   | ^^^^^^^^^^^ the trait `bitfield::checks::TotalSizeIsMultipleOfEightBits` is not implemented for `[u8; 7]`
   |
   = help: the trait `bitfield::checks::TotalSizeIsMultipleOfEightBits` is implemented for `[u8; 0]`
note: required by a bound in `CheckTotalSizeIsMultipleOfEightBits`
  --> src/lib.rs
   |
   | pub struct CheckTotalSizeIsMultipleOfEightBits<T: checks::TotalSizeIsMultipleOfEightBits> {
   |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CheckTotalSizeIsMultipleOfEightBits`
   = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
